<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mandala Wallpaper Live</string>
    <string name="set_wallpaper_now">Set Wallpaper Now</string>
    <string name="more_informations">More Informations</string>
    <string name="thanks_for_installing"><![CDATA[Thanks for installing <b>Mandala Wallpaper</b>!<br>Use the button below to start using this amazing wallpaper!]]></string>

    <string name="codebutchery_page_url">https://codebutchery.wordpress.com/mandala-live-wallpaper/</string>
    <string name="warning_settings_too_heavy">The chosen settings are too heavy for your device, the Frames Per Second count in the bottom right corner should report at least %1$d FPS, if you keep this settings you may experience slowdowns while using this wallpaper. Try reducing the number of cells. Do you want to continue with this settings?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="pref_fill_shapes">Fill Shapes</string>
    <string name="pref_fill_shapes_key">fill_shapes</string>

    <string name="pref_random_cell_size">Random Cells Size</string>
    <string name="pref_random_cell_size_key">random_cells_sizes</string>

    <string name="pref_shape">Shape</string>
    <string name="pref_shape_squares">Square</string>
    <string name="pref_shape_circles">Circle</string>

    <string name="pref_shape_key">shape</string>
    <string name="pref_shape_value_squares">square</string>
    <string name="pref_shape_value_circles">circle</string>

    <string name="pref_spacing">Spacing</string>
    <string name="pref_spacing_extreme">Extreme</string>
    <string name="pref_spacing_large">Large</string>
    <string name="pref_spacing_normal">Normal</string>
    <string name="pref_spacing_small">Small</string>
    <string name="pref_spacing_nospacing">No Spacing</string>

    <string name="pref_spacing_key">cells_spacing</string>
    <string name="pref_spacing_value_extreme">extreme</string>
    <string name="pref_spacing_value_large">large</string>
    <string name="pref_spacing_value_normal">normal</string>
    <string name="pref_spacing_value_small">small</string>
    <string name="pref_spacing_value_nospacing">nospacing</string>

    <string name="pref_cells_amount">Cells amount</string>
    <string name="pref_cells_amount_few">Few</string>
    <string name="pref_cells_amount_normal">Normal</string>
    <string name="pref_cells_amount_more">More</string>
    <string name="pref_cells_amount_even_more">Even More</string>
    <string name="pref_cells_amount_extreme">Extreme</string>

    <string name="pref_cells_amount_key">cells_amount</string>
    <string name="pref_cells_amount_value_few">few</string>
    <string name="pref_cells_amount_value_normal">normal</string>
    <string name="pref_cells_amount_value_more">more</string>
    <string name="pref_cells_amount_value_even_more">even_more</string>
    <string name="pref_cells_amount_value_extreme">extreme</string>

    <string name="pref_theme">Theme</string>
    <string name="pref_theme_ruby_red">Ruby Red</string>
    <string name="pref_theme_vodoo_violet">Vodoo Violet</string>
    <string name="pref_theme_barley_corn">Barley Corn</string>
    <string name="pref_theme_silver_tree">Silver Tree</string>
    <string name="pref_theme_grassy_green">Grassy Green</string>
    <string name="pref_theme_ship_cove">Ship Cove</string>
    <string name="pref_theme_indigo">Indigo</string>
    <string name="pref_theme_vibrant_violet">Vibrant Violet</string>
    <string name="pref_theme_automatic">Rainbow</string>

    <string name="pref_theme_key">theme</string>
    <string name="pref_theme_value_ruby_red">ruby_red</string>
    <string name="pref_theme_value_vodoo_violet">vodoo_violet</string>
    <string name="pref_theme_value_barley_corn">barley_corn</string>
    <string name="pref_theme_value_silver_tree">silver_tree</string>
    <string name="pref_theme_value_grassy_green">grassy_green</string>
    <string name="pref_theme_value_ship_cove">ship_cove</string>
    <string name="pref_theme_value_indigo">indigo</string>
    <string name="pref_theme_value_vivid_violet">vibrant_violet</string>
    <string name="pref_theme_value_automatic">automatic</string>
    <string name="warning">Warning</string>
    <string name="title_activity_development">DevelopmentActivity</string>

</resources>
